compiler/testData/diagnostics/tests/subtyping/kt2744.fir.kt
class X : <!UNRESOLVED_REFERENCE!>S<!>

fun f(l: List<X>) {}
